--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Simple toughts of complex man
+email: davor_nedic@hotmail.com
+description: "Personal website of Davor Nedic, regarding Java programing, JavaScript, HTML, CSS and mobile app development"
 baseurl: ""
-url: "http://yourdomain.com"
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://tnedich.github.io"
+twitter_username: tnedich
+github_username:  tnedich
 
 # Build settings
 markdown: kramdown
