--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Simple toughts of complex man
+title: Simple thoughts of complex man
 email: davor_nedic@hotmail.com
 description: "Personal website of Davor Nedic, regarding Java programing, JavaScript, HTML, CSS and mobile app development"
 baseurl: ""
