--- a/cv/_config.yml
+++ b/cv/_config.yml
@@ -2,7 +2,7 @@
 
 # Site Settings
 title: Davor Nedic |CV
-url: 'tnedic.github.io'
+url: 'tnedich.github.io'
 baseurl: '/cv' #change it according to your repository name
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
 theme_skin: blue # blue turquoise green berry orange ceramic
