--- a/cv/_config.yml
+++ b/cv/_config.yml
@@ -3,7 +3,7 @@
 # Site Settings
 title: Davor Nedic |CV
 url: 'tnedich.github.io'
-baseurl: 'tnedicg.github.io/cv' #change it according to your repository name
+baseurl: 'tnedich.github.io/cv' #change it according to your repository name
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
 theme_skin: blue # blue turquoise green berry orange ceramic
 
